--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,43 +3,46 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">      
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <title>{% block title %} Base {% endblock %}</title>
   </head>
-  <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <body class="text-dark">
+
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg" style="background-color: var(--bs-primary);">
+      <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
             {% if user.is_authenticated %}
-            <a class="nav-item nav-link" id="home" href="/">Home</a>
-            <a class="nav-item nav-link" id="savedPlans" href="/saved_plans">Saved Plans</a>
-            <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+            <a class="nav-item nav-link text-light" href="/">Home</a>
+            <a class="nav-item nav-link text-light" href="/saved_plans">Saved Plans</a>
+            <a class="nav-item nav-link text-light" href="/logout">Logout</a>
             {% else %}
-            <a class="nav-item nav-link" id="home" href="/">Home</a>
-            <a class="nav-item nav-link" id="login" href="/login">Login</a>
-            <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+            <a class="nav-item nav-link text-light" href="/">Home</a>
+            <a class="nav-item nav-link text-light" href="/login">Login</a>
+            <a class="nav-item nav-link text-light" href="/sign-up">Sign Up</a>
             {% endif %}
           </div> 
         </div>
-      </nav>
-      
+      </div>
+    </nav>
 
-      {% block content %} 
-      <p>base content</p>
-      {% endblock %}
+    {% block content %}
+    <p>base content</p>
+    {% endblock %}
 
-      {% with messages = get_flashed_messages(with_categories=true) %}
-          {% if messages %}
-              {% for message in messages %}
-                  <div>{{ message }}</div>
-              {% endfor %}
-          {% endif %}
-      {% endwith %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-warning">{{ message }}</div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>    
-    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>    
+  </body>
 </html>
-
