--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -3,17 +3,17 @@
 {% block title %}Login{% endblock %}
 {% block content %}
 
-<form method="POST">
-    <h1>Login</h1>
+<form method="POST" class="container mt-4" style="max-width: 500px;">
+    <h1 class="mb-4 text-center">Login</h1>
     <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" id="username" name="username" placeholder="Enter username">
+        <input class="form-control" type="text" id="username" name="username" placeholder="Enter username">
     </div>
     <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter password">
+        <input class="form-control" type="password" id="password" name="password" placeholder="Enter password">
     </div>
-    <button type="submit">Login</button>
+    <button type="submit" class="btn btn-primary mt-3 w-100">Login</button>
 </form>
 
 
