--- a/website/templates/saved_plans.html
+++ b/website/templates/saved_plans.html
@@ -32,7 +32,7 @@
                     <div class="card-footer text-center">
                         <!-- Delete Form -->
                         <form method="POST" action="{{ url_for('views.delete_plan', plan_id=plan.id) }}" style="display:inline;">
-                            <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this plan?');">Delete</button>
+                            <button type="submit" class="btn btn-theme" onclick="return confirm('Are you sure you want to delete this plan?');">Delete</button>
                         </form>                    
                     </div>
     
