--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -2,20 +2,20 @@
 
 {% block title %}Sign Up{% endblock %}
 {% block content %}
-<form method="POST">
-    <h1>sign up page</h1>
+<form method="POST" class="container mt-4" style="max-width: 500px;">
+    <h1 class="mb-4 text-center">Sign Up</h1>
     <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" id="username" name="username" placeholder="Enter username">
+        <input class="form-control" type="text" id="username" name="username" placeholder="Enter username">
     </div>
     <div class="form-group">
         <label for="password1">Password</label>
-        <input type="password" id="password1" name="password1" placeholder="Enter password">
+        <input class="form-control" type="password" id="password1" name="password1" placeholder="Enter password">
     </div>
     <div class="form-group">
         <label for="password2">Password (Confirm)</label>
-        <input type="password" id="password2" name="password2" placeholder="Confirm password">
+        <input class="form-control" type="password" id="password2" name="password2" placeholder="Confirm password">
     </div>
-    <button type="submit">Create Account</button>
+    <button type="submit" class="btn btn-primary mt-3 w-100">Create Account</button>
 </form>
 {% endblock %}
