--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -20,7 +20,7 @@
         <div class="mb-4">
             <label for="approach" class="form-label">What best describes your desired approach?</label>
             <select name="approach" id="approach" class="form-select form-select-lg">
-                <option value="low_volume">Heavy weight, low volume, training very close to or even past failure</option>
+                <option value="low_volume">Heavy weight, low volume, training very close to or past failure</option>
                 <option value="moderate_volume" selected>Moderate weight, moderate volume, training close to failure</option>
                 <option value="high_volume">Lighter weight, higher volume, training somewhat close to failure</option>
             </select>
