--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -31,18 +31,22 @@
       </div>
     </nav>
 
+    
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+      messages %} {% for category, message in messages %} {% if category ==
+        'error' %}
+    <div class="alert alert-danger alter-dismissable fade show" role="alert">
+      {{ message }}
+    </div>
+    {% else %}
+    <div class="alert alert-success alter-dismissable fade show" role="alert">
+      {{ message }}
+    </div>
+    {% endif %} {% endfor %} {% endif %} {% endwith %}
+        
     {% block content %}
     <p>base content</p>
     {% endblock %}
-
-    {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-        {% for message in messages %}
-          <div class="alert alert-warning">{{ message }}</div>
-        {% endfor %}
-      {% endif %}
-    {% endwith %}
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>    
   </body>
 </html>
