--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -29,7 +29,7 @@
         <!-- EQUIPMENT -->
         <div class="mb-4">
             <label class="form-label">Equipment Available?</label><br>
-            {% for label, value in [('Barbell', 'Barbell'), ('Dumbbell', 'Dumbbell'), ('Bodyweight', 'Bodyweight'), ('Cable', 'Cable'), ('Machine', 'Machine')] %}
+            {% for label, value in [('Barbell', 'Barbell'), ('Dumbbell', 'Dumbbell'), ('Cable', 'Cable'), ('Machine', 'Machine'), ('Bodyweight', 'Bodyweight')] %}
             <div class="form-check form-check-inline">
                 <input type="checkbox" id="{{ value }}" name="equipment" value="{{ label }}" checked class="form-check-input">
                 <label for="{{ value }}" class="form-check-label">{{ label }}</label>
