--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,52 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <title>{% block title %} Base {% endblock %}</title>
-  </head>
-  <body class="text-dark">
 
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg" style="background-color: var(--bs-primary);">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar">
-          <div class="navbar-nav">
-            {% if user.is_authenticated %}
-            <a class="nav-item nav-link text-light" href="/">Home</a>
-            <a class="nav-item nav-link text-light" href="/saved_plans">Saved Plans</a>
-            <a class="nav-item nav-link text-light" href="/logout">Logout</a>
-            {% else %}
-            <a class="nav-item nav-link text-light" href="/">Home</a>
-            <a class="nav-item nav-link text-light" href="/login">Login</a>
-            <a class="nav-item nav-link text-light" href="/sign-up">Sign Up</a>
-            {% endif %}
-          </div> 
-        </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <title>{% block title %} Base {% endblock %}</title>
+</head>
+
+<body class="text-dark">
+
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: var(--bs-primary);">
+    <div class="container-fluid">
+      <a class="navbar-brand text-light" href="/">MyLiftPlan</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link active text-light" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/saved_plans">Saved Plans</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/logout">Logout</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link active text-light" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/sign-up">Sign Up</a>
+          </li>
+
+        </ul>
+        {% endif %}
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    
-    {% with messages = get_flashed_messages(with_categories=true) %} {% if
-      messages %} {% for category, message in messages %} {% if category ==
-        'error' %}
-    <div class="alert alert-danger alter-dismissable fade show" role="alert">
-      {{ message }}
-    </div>
-    {% else %}
-    <div class="alert alert-success alter-dismissable fade show" role="alert">
-      {{ message }}
-    </div>
-    {% endif %} {% endfor %} {% endif %} {% endwith %}
-        
-    {% block content %}
-    <p>base content</p>
-    {% endblock %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>    
-  </body>
+
+  {% with messages = get_flashed_messages(with_categories=true) %} {% if
+  messages %} {% for category, message in messages %} {% if category ==
+  'error' %}
+  <div class="alert alert-danger alter-dismissable fade show" role="alert">
+    {{ message }}
+  </div>
+  {% else %}
+  <div class="alert alert-success alter-dismissable fade show" role="alert">
+    {{ message }}
+  </div>
+  {% endif %} {% endfor %} {% endif %} {% endwith %}
+
+  {% block content %}
+  <p>base content</p>
+  {% endblock %}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+<footer class="bg-dark text-light text-center py-4 mt-5">
+  <div class="container">
+    <p>Created by <a href="https://www.israelavendanojr.com/" target="_blank" class="text-light">israelavendanojr</a></p>
+    <p>&copy; 2025 MyLiftPlan. All Rights Reserved.</p>
+    <p>
+      <a href="https://linkedin.com/in/israelavendanojr" target="_blank" class="text-light">LinkedIn</a> |
+      <a href="https://github.com/israelavendanojr" target="_blank" class="text-light">GitHub</a> |
+      <a href="mailto:israelavendanojr@gmail.com" class="text-light">Email</a>
+    </p>
+  </div>
+</footer>
+
 </html>
