--- a/website/templates/generated_plans.html
+++ b/website/templates/generated_plans.html
@@ -22,14 +22,15 @@
                                 <strong>{{ day.name }}</strong>
                                 <ul>
                                     {% for exercise in day.exercises %}
-                                    <li>{{ exercise.name }} : {{exercise.sets}} x {{exercise.start_reps}}-{{exercise.end_reps}}</li>
+                                    <li>{{ exercise.name }} : {{exercise.sets}} x
+                                        {{exercise.start_reps}}-{{exercise.end_reps}}</li>
                                     {% endfor %}
                                 </ul>
                             </li>
                             {% endfor %}
                         </ul>
                     </div>
-                    <div class="card-footer text-center">
+                    <div class="card-footer text-center d-flex justify-content-center align-items-center">
                         <!-- Save Form -->
                         <form method="POST" action="{{ url_for('views.save_plan') }}">
                             <input type="hidden" name="split_name" value="{{ plan.split_name }}">
@@ -41,18 +42,18 @@
             </div>
             {% endfor %}
         </div>
-    
+
         <!-- Controls -->
-        {% if 1 < plans|length %}
-        <button class="carousel-control-prev" type="button" data-bs-target="#workoutCarousel" data-bs-slide="prev">
+        {% if 1 < plans|length %} <button class="carousel-control-prev" type="button" data-bs-target="#workoutCarousel"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#workoutCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-        {% endif %}
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#workoutCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            {% endif %}
     </div>
     {% else %}
     <p class="text-center">No workout plans available. Please generate a plan first.</p>
@@ -62,7 +63,7 @@
 <!-- Adding a script to fill the hidden input with valid JSON data -->
 <script>
     {% for plan in plans %}
-        document.getElementById('plan_data_{{ loop.index }}').value = JSON.stringify({{ plan | tojson }});
+    document.getElementById('plan_data_{{ loop.index }}').value = JSON.stringify({{ plan | tojson }});
     {% endfor %}
 </script>
 
