Sign up incentive

--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -18,4 +18,15 @@
     </div>
     <button type="submit" class="btn btn-primary mt-3 w-100">Create Account</button>
 </form>
+
+<div class="mb-4 p-3 bg-light border rounded shadow-sm">
+    <h5 class="text-primary">Sign up to..</h5>
+    <ul class="small">
+      <li>Save your personalized workout plans</li>
+      <li>Modify your routines anytime</li>
+      <li>Access your plans from any device</li>
+      <li>View your workout week at a glance</li>
+      <li>More customization features coming soon!</li>
+    </ul>
+  </div>
 {% endblock %}
