--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -86,20 +86,22 @@
   </div>
   {% endif %} {% endfor %} {% endif %} {% endwith %}
 
+  <main class="container my-4">
   {% block content %}
   <p>base content</p>
   {% endblock %}
+  </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <footer class="bg-dark text-light text-center py-4 mt-5">
+    <div class="container">
+      <div class="d-flex justify-content-center align-items-center">
+        <p class="mb-0 me-3">&copy; 2025 MyLiftPlan. All Rights Reserved.</p>
+        <a href="https://www.israelavendanojr.com/" target="_blank" class="text-light me-3">@israelavendanojr</a>
+      </div>
+    </div>
+  </footer>
 </body>
 
-<footer class="bg-dark text-light text-center py-4 mt-5">
-  <div class="container">
-    <div class="d-flex justify-content-center align-items-center">
-      <p class="mb-0 me-3">&copy; 2025 MyLiftPlan. All Rights Reserved.</p>
-      <a href="https://www.israelavendanojr.com/" target="_blank" class="text-light me-3">@israelavendanojr</a>
-    </div>
-  </div>
-</footer>
 
 <style>
   footer {
