sign up redirect

--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -26,7 +26,7 @@
       <li>Modify your routines anytime</li>
       <li>Access your plans from any device</li>
       <li>View your workout week at a glance</li>
-      <li>More customization features coming soon!</li>
+      <li>Be the first to near coming features!</li>
     </ul>
   </div>
 {% endblock %}
