--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -16,5 +16,10 @@
     <button type="submit" class="btn btn-primary mt-3 w-100">Login</button>
 </form>
 
+<p class="mt-3 text-center">
+    Don’t have an account?
+    <a href="{{ url_for('auth.sign_up') }}">Sign up here!</a>
+  </p>
+  
 
 {% endblock %}
