swap exercise moduls

--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -19,14 +19,14 @@
     <button type="submit" class="btn btn-primary mt-3 w-100">Create Account</button>
 </form>
 
-<div class="mb-4 p-3 bg-light border rounded shadow-sm">
+<div class="mt-5 mb-4 p-3 bg-light border rounded shadow-sm">
     <h5 class="text-primary">Sign up to..</h5>
     <ul class="small">
       <li>Save your personalized workout plans</li>
       <li>Modify your routines anytime</li>
       <li>Access your plans from any device</li>
       <li>View your workout week at a glance</li>
-      <li>Be the first to near coming features!</li>
+      <li>Be the first to upcoming features!</li>
     </ul>
   </div>
-{% endblock %}
+  {% endblock %}
