--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -18,8 +18,8 @@
 
 <p class="mt-3 text-center">
     Don’t have an account?
-    <a href="{{ url_for('auth.sign_up') }}">Sign up here!</a>
-  </p>
+    <a href="{{ url_for('auth.sign_up') }}" class="text-primary">Sign up here!</a>
+</p>
   
 
 {% endblock %}
