--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -92,6 +92,11 @@
   {% endblock %}
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
+  {% block scripts %}
+  {% endblock %}
+  
+  
   <footer class="bg-dark text-light text-center py-4 mt-5">
     <div class="container">
       <div class="d-flex justify-content-center align-items-center">
